tree-sitter-cog/test/corpus/const.txt
====================
Const declaration
====================

const FORTY_TWO = 40 + 2;

---

(source_file
  (const_decl
    (identifier)
    (binary_expr
      (literal_expr
        (number_literal))
      (literal_expr
        (number_literal)))))
