tree-sitter-cog/test/corpus/func.txt
====================
Function declaration
====================

func x(): Int {
  return 1;
}

---

(source_file
  (func_decl
    (identifier)
    (param_list)
    (name_type
      (identifier))
    (block_stmt
      (return_stmt
        (literal_expr
          (number_literal))))))
