tree-sitter-cog/test/corpus/hello_world.txt
====================
Hello world
====================

include "cstdio.cogh";

func main(): Int {
  printf("Hello, World!");
  return 0;
}

---

(source_file
  (include_decl
    (string_literal))
  (func_decl
    (identifier)
    (param_list)
    (name_type
      (identifier))
    (block_stmt
      (expr_stmt
        (call_expr
          (name_expr
            (identifier))
          (arg_list
            (literal_expr
              (string_literal)))))
      (return_stmt
        (literal_expr
          (number_literal))))))
