tree-sitter-cog/test/corpus/struct.txt
====================
Struct declaration
====================

struct Pair {
    fst: Int,
    snd: Int,
}

---

(source_file
  (struct_decl
    (identifier)
    (struct_member
      (identifier)
      (name_type
        (identifier)))
    (struct_member
      (identifier)
      (name_type
        (identifier)))))
